--- a/source/layouts/partials/head.html
+++ b/source/layouts/partials/head.html
@@ -28,6 +28,6 @@
 <link rel="shortcut icon" href="{{ .Site.BaseURL }}/images/favicon.ico">
 <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}/images/icon.png">
 
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css">
 
 <!-- VIEW THE SOURCE CODE HERE: https://github.com/cjmlgrto/actsofservice.co -->
