--- a/source/layouts/partials/head.html
+++ b/source/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 
-<title>{{ .Title }} &#8211; {{ .Site.Title }}</title>
+<title>{{ if eq .IsHome false }}{{ .Title }} &#8211; {{ .Site.Title }}{{ else }}{{ .Site.Title }}{{ end }}</title>
 
 {{ $summary := trim (plainify (htmlUnescape .Page.Summary)) " \t\n" }}
 {{ $description := cond (ne (len $summary) 0) $summary .Site.Params.Description }}
