--- a/source/static/style.css
+++ b/source/static/style.css
@@ -1,6 +1,210 @@
+/* BASE STYLES */
+/* --------------------------------- */
+
 * {
     margin: 0;
     padding: 0;
     width: 100%;
+    border: none;
     box-sizing: border-box;
+}
+
+:root {
+    --color--background: #f5f5f5;
+    
+    --color--text-accent: #3A3A42;
+    --color--text-primary: #3A3A42;
+    --color--text-secondary: #9B9B9B;
+    
+    --color--divider: #D7D7D7;
+}
+
+/* TYPOGRAPHY  */
+/* --------------------------------- */
+
+@font-face {
+    font-family: 'Sharp Grotesk';
+    font-weight: normal;
+    src: url(/fonts/SharpGroteskDBBook22.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Sharp Grotesk';
+    font-weight: bold;
+    src: url(/fonts/SharpGroteskDBMedium22.ttf) format('truetype');
+}
+
+html {
+    font-family: "Sharp Grotesk", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 100%;
+    line-height: 1.5em;
+
+    background-color: var(--color--background);
+    color: var(--color--text-primary);
+
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+
+    -webkit-text-size-adjust: 100%;
+}
+
+input {
+    font-family: "Sharp Grotesk", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 100%;
+    line-height: 1.5em;
+
+    background-color: var(--color--background);
+    color: var(--color--text-primary);
+
+    outline: none;
+}
+
+input::placeholder {
+    color: var(--color--text-secondary);
+}
+
+input[type=submit] {
+    background-color: var(--color--text-primary);
+    color: var(--color--background);
+    padding: 12px;
+    cursor: pointer;
+}
+
+/* LAYOUT  */
+/* --------------------------------- */
+
+body {
+    max-width: 560px;
+    padding: 24px 16px;
+    margin: 0 auto;
+}
+
+main > * {
+    margin-bottom: 48px;
+}
+
+.summary {
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
+@media (min-width: 640px) {
+    .summary {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
+
+.list {
+    list-style: none;
+    padding-top: 24px;
+    border-top: 1px solid var(--color--divider);
+}
+
+.list li,
+.list fieldset {
+    margin-bottom: 24px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid var(--color--divider);
+}
+
+.list li,
+.list li > a,
+.list fieldset {
+    display: flex;
+}
+
+.list .leading {
+    width: 25%;
+    font-weight: bold;
+    margin-right: 16px;
+    color: var(--color--text-secondary);
+}
+
+.list .content {
+    width: calc(75% - 16px);
+}
+
+.list .content .title {
+    font-weight: bold;
+    color: var(--color--text-accent);
+}
+
+.list .content .subtitle {
+    color: var(--color--text-secondary);
+}
+
+.bookend .content {
+    text-align: right;
+}
+
+.wordmark svg > * {
+    fill: var(--color--text-accent);
+}
+
+.header {
+    display: flex;
+    align-items: flex-end;
+    color: var(--color--text-secondary);
+}
+
+.header .leading {
+    width: calc(50% - 16px);
+    margin-right: 16px;
+}
+
+.header .content {
+    width: 50%;
+    text-align: right;
+}
+
+.header .content .title {
+    font-weight: bold;
+    color: var(--color--text-accent);
+}
+
+footer {
+    text-align: center;
+    margin-bottom: 48px;
+}
+
+footer .socials {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 48px;
+}
+
+footer .socials li {
+    width: 48px;
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+footer small {
+    font-size: 12px;
+    color: var(--color--text-accent);
+}
+
+
+/* PAGE-SPECIFIC STYLES  */
+/* --------------------------------- */
+
+#about-acts {
+    font-weight: bold;
+    text-align: center;
+}
+
+#acts a {
+    text-decoration: none;
+    color: var(--color--text-secondary);
+
+    background-image: url(images/success.svg);
+    background-repeat: no-repeat;
+    background-position: top right;
+}
+
+#acts .waitlist {
+    background-image: url(images/join.svg);
 }
