--- a/source/static/style.css
+++ b/source/static/style.css
@@ -63,7 +63,14 @@ input::placeholder {
     color: var(--color--text-secondary);
 }
 
-input[type=submit] {
+button {
+    appearance: none;
+    display: block;
+
+    font-family: "Sharp Grotesk", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 100%;
+    line-height: 1.5em;
+
     background-color: var(--color--text-primary);
     color: var(--color--background);
     padding: 12px;
@@ -207,4 +214,39 @@ footer small {
 
 #acts .waitlist {
     background-image: url(images/join.svg);
+}
+
+/* MISC  */
+/* --------------------------------- */
+
+main > * {
+    animation-name: fadein;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
+}
+
+main > *:nth-child(1) {
+    animation-duration: 0.5s;
+}
+
+main > *:nth-child(2) {
+    animation-duration: 0.75s;
+}
+
+main > *:nth-child(3) {
+    animation-duration: 1s;
+}
+
+@keyframes fadein {
+    0% {
+        transform: translateY(32px);
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
