--- a/layouts/_default/invite.html
+++ b/layouts/_default/invite.html
@@ -36,21 +36,21 @@
         <div class="leading">Q3</div>
         <div class="content">
             <div class="title">What's your social media handle?</div>
-            <div class="subtitle"><input type="text" name="socials" placeholder="e.g. Instagram, Twitter (X), Threads..."/></div>
+            <div class="subtitle"><textarea name="socials" placeholder="e.g. Instagram, Twitter (X), Threads..."></textarea></div>
         </div>
     </fieldset>
     <fieldset>
         <div class="leading">Q4</div>
         <div class="content">
             <div class="title">What pronouns do you go by?</div>
-            <div class="subtitle"><input type="text" name="pronouns" placeholder="e.g. They/Them, She/Her, He/Him, etc..."/></div>
+            <div class="subtitle"><textarea name="pronouns" placeholder="e.g. They/Them, She/Her, He/Him, etc..."></textarea></div>
         </div>
     </fieldset>
     <fieldset>
         <div class="leading">Q5</div>
         <div class="content">
             <div class="title">Any dietary requirements?</div>
-            <div class="subtitle"><input type="text" name="dietary" placeholder="e.g. Vego, spice tolerance, allergies..."/></div>
+            <div class="subtitle"><textarea name="dietary" placeholder="e.g. Vego, spice tolerance, allergies..."></textarea></div>
         </div>
     </fieldset>
     <button type="submit">Request Invite</button>
