--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ html {
     -webkit-text-size-adjust: 100%;
 }
 
-input {
+input, textarea {
     font-family: "Sharp Grotesk", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 100%;
     line-height: 1.5em;
@@ -59,8 +59,13 @@ input {
     outline: none;
 }
 
-input::placeholder {
+input::placeholder, textarea::placeholder {
     color: var(--color--text-secondary);
+}
+
+textarea {
+    min-height: 48px;
+    resize: none;
 }
 
 button {
