--- a/static/style.css
+++ b/static/style.css
@@ -224,7 +224,7 @@ footer small {
 /* MISC  */
 /* --------------------------------- */
 
-main > * {
+main > *, footer {
     animation-name: fadein;
     animation-duration: 0.5s;
     animation-timing-function: ease-in-out;
@@ -240,6 +240,10 @@ main > *:nth-child(2) {
 
 main > *:nth-child(3) {
     animation-duration: 1s;
+}
+
+footer {
+    animation-duration: 1.25s;
 }
 
 @keyframes fadein {
