--- a/static/style.css
+++ b/static/style.css
@@ -199,6 +199,50 @@ footer small {
     color: var(--color--text-accent);
 }
 
+figure {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 120px;
+}
+
+figure img {
+    max-width: 33%;
+    animation-name: dissolve;
+    animation-timing-function: ease-in-out;
+}
+
+figure img:nth-child(1) {
+    animation-duration: 1s;
+    transform: translateX(10%) translateY(5%);
+}
+
+figure img:nth-child(2) {
+    animation-duration: 2s;
+    transform: translateY(20%);
+}
+
+figure img:nth-child(3) {
+    animation-duration: 3s;
+    z-index: 99;
+    transform: translateX(-10%) translateY(-5%);
+}
+
+figure img:nth-child(4) {
+    animation-duration: 4s;
+    transform: translateX(20%) translateY(-10%);
+}
+
+figure img:nth-child(5) {
+    animation-duration: 5s;
+    z-index: 99;
+    transform: translateX(10%) translateY(30%);
+}
+
+figure img:nth-child(6) {
+    animation-duration: 6s;
+    transform: translateX(-20%) translateY(-30%);
+}
+
 
 /* PAGE-SPECIFIC STYLES  */
 /* --------------------------------- */
@@ -244,6 +288,18 @@ main > *:nth-child(3) {
 
 footer {
     animation-duration: 1.25s;
+}
+
+@keyframes dissolve {
+    0% {
+        opacity: 0;
+    }
+    75% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 @keyframes fadein {
