--- a/static/style.css
+++ b/static/style.css
@@ -243,6 +243,12 @@ figure img:nth-child(6) {
     transform: translateX(-20%) translateY(-30%);
 }
 
+figure img:nth-child(7) {
+    z-index: 999;
+    animation-duration: 7s;
+    transform: translateX(50%) translateY(-30%);
+}
+
 
 /* PAGE-SPECIFIC STYLES  */
 /* --------------------------------- */
