--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,21 +1,23 @@
 {{ define "main" }}
-<div class="logo">
-    {{ partial "logo" . }}
+<div class="single">
+    <div class="logo">
+        {{ partial "logo" . }}
+    </div>
+    <div class="summary" id="about-acts">
+        <p>{{ .Content }}</p>
+    </div>
+    <ul class="list" id="acts">
+        {{ range (where .Site.RegularPages.ByDate ".Type" "acts") }}
+        <li>
+            <a href="{{ .Permalink }}" class='{{ if eq .Params.Layout "invite" }}waitlist{{ end }}'>
+                <div class="leading">{{ .Params.Act }}</div>
+                <div class="content">
+                    <div class="title">{{ .Title }}</div>
+                    <time class="subtitle" datetime='{{ .Date.Format "2006-01-02T15:04:05-0700" }}"'>{{ .Date.Format "Jan 2006" }}</time>
+                </div>
+            </a>
+        </li>
+        {{ end }}
+    </ul>
 </div>
-<div class="summary" id="about-acts">
-    <p>{{ .Content }}</p>
-</div>
-<ul class="list" id="acts">
-    {{ range (where .Site.RegularPages.ByDate ".Type" "acts") }}
-    <li>
-        <a href="{{ .Permalink }}" class='{{ if eq .Params.Layout "invite" }}waitlist{{ end }}'>
-            <div class="leading">{{ .Params.Act }}</div>
-            <div class="content">
-                <div class="title">{{ .Title }}</div>
-                <time class="subtitle" datetime='{{ .Date.Format "2006-01-02T15:04:05-0700" }}"'>{{ .Date.Format "Jan 2006" }}</time>
-            </div>
-        </a>
-    </li>
-    {{ end }}
-</ul>
 {{ end }}
