--- a/layouts/_default/invite.html
+++ b/layouts/_default/invite.html
@@ -18,7 +18,7 @@
     <div class="summary">
         <p>{{ .Params.Summary }}</p>
     </div>
-    <form class="list" name="invite" netlify>
+    <form class="list" method="POST" name="invite" netlify>
         <fieldset>
             <div class="leading">Q1</div>
             <div class="content">
